[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/StylishFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Intro/Intro.gd" type="Script" id=2]
[ext_resource path="res://Framework/Entities/LoadingCircle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Images/axis_ball.png" type="Texture" id=4]
[ext_resource path="res://Resources/TextFontAxis.tres" type="DynamicFont" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Animation" id=2]
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Title:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.133333, 0.713726, 1, 1 ), Color( 0.0745098, 0.952941, 0.913725, 1 ), Color( 0.0196078, 0.65098, 0.415686, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 110, -15.5 ), Vector2( 110, 10 ), Vector2( 110, -15.5 ), Vector2( 110, 10 ), Vector2( 110, -15.5 ), Vector2( 110, 10 ), Vector2( 110, -15.5 ), Vector2( 110, 10 ), Vector2( 110, -15.5 ), Vector2( 110, 10 ), Vector2( 110, -15.5 ), Vector2( 110, 10 ), Vector2( 110, -15.5 ), Vector2( 110, 10 ), Vector2( 110, -15.5 ) ]
}

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float value: hint_range(0, 100);
uniform float thickness: hint_range(0, 100) = 30;
uniform sampler2D fg: hint_albedo;
uniform sampler2D bg: hint_black_albedo;
uniform float offset: hint_range(0, 100);
uniform float smoothing: hint_range(0, 100) = 5;

void fragment() {
	vec2 point = UV - vec2(0.5);
	float PI = 3.14159265358979323846;
	float ang = (1.0 - atan(point.x, point.y) / PI) * 50.0 - offset;	
	if (ang < 0.0) {
		ang += 100.0;
	}	
	float s = smoothing / 1000.0;
	float k = PI / 2.0 / s;
	float r1 = 0.5 - thickness / 200.0;
	float r2 = 0.5;
	float r = length(point);
	float uy = (r2 - r) / (r2 - r1);
	
	if (r > r2 || r < r1) {
		COLOR.a = 0.0;
	}
	else {
		if (ang <= value) {
			COLOR = texture(fg, vec2(ang / 100.0, uy));
		}
		else {
			COLOR = texture(bg, vec2(ang / 100.0, uy));
		}
		
		if ((r2 - r) < s) {
			COLOR.a = sin((r2 - r) * k);
		}
		if ((r - r1) < s) {
			COLOR.a = sin((r - r1) * k);
		}
	}
}"

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 0.0235294, 0.219608, 0.278431, 1, 0, 1, 0.94902, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 3 )
shader_param/value = 0.0
shader_param/thickness = 20.0
shader_param/offset = 0.0
shader_param/smoothing = 10.0
shader_param/fg = SubResource( 7 )
shader_param/bg = SubResource( 5 )

[sub_resource type="Animation" id=9]
resource_name = "Main"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Title/BackTitle:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.576471, 1 ), Color( 0, 0.858824, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title/BackTitle:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ) ]
}

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.10803
margin_top = -1.10803
margin_right = 1.10803
margin_bottom = -1.10803
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -370.0
margin_top = -285.5
margin_right = 370.0
margin_bottom = 75.5
custom_fonts/font = ExtResource( 1 )
text = "FOCUS EDGE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackTitle" type="Label" parent="Title"]
self_modulate = Color( 1, 0, 0.576471, 1 )
material = SubResource( 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -370.0
margin_top = -180.5
margin_right = 370.0
margin_bottom = 180.5
rect_scale = Vector2( 1.005, 1.005 )
custom_fonts/font = ExtResource( 1 )
text = "FOCUS EDGE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Main = SubResource( 2 )

[node name="Circle" parent="." instance=ExtResource( 3 )]
material = SubResource( 8 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -126.108
margin_top = -275.0
margin_right = 123.892
margin_bottom = -25.0

[node name="TextureRect" type="TextureRect" parent="Circle"]
self_modulate = Color( 0, 0, 0, 0.513726 )
margin_left = 36.6345
margin_top = 36.6345
margin_right = 386.634
margin_bottom = 386.634
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartLabel" type="Label" parent="Circle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -55.0
margin_right = 66.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 5 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackTitleAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Main = SubResource( 9 )
[connection signal="gui_input" from="Circle" to="." method="_on_play_input_event"]
